--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,6 +4,7 @@ body {
   -webkit-animation: rainbow 30s ease infinite;
   animation: rainbow 30s ease infinite;
 }
+
 @-webkit-keyframes rainbow {
   0% { background-position: 0% 50% }
   50% { background-position: 100% 50% }
@@ -22,33 +23,33 @@ body {
   display: -webkit-flex;
   justify-content: center;
   margin-top: 15px;
-}
 
-.controller button {
-  font-size: 1.1rem;
-  font-weight: 700;
-  border: 1px solid #fff;
-  background-color: transparent;
-  color: #fff;
-  border-radius: 6px;
-  outline: none;
-  width: 85px;
-  height: 35px;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  -webkit-transition: all 0.25s ease-out;
-  -moz-transition: all 0.25s ease-out;
-  transition: all 0.25s ease-out;
-  margin: 15px;
-  text-transform: uppercase;
-  opacity: 0.7;
-}
+  button {
+    font-size: 1.1rem;
+    font-weight: 700;
+    border: 1px solid #fff;
+    background-color: transparent;
+    color: #fff;
+    border-radius: 6px;
+    outline: none;
+    width: 85px;
+    height: 35px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    -webkit-transition: all 0.25s ease-out;
+    -moz-transition: all 0.25s ease-out;
+    transition: all 0.25s ease-out;
+    margin: 15px;
+    text-transform: uppercase;
+    opacity: 0.7;
+  }
 
-.controller button:hover {
-  cursor: pointer;
-  background-color: #000;
-  opacity: 0.7;
+  button:hover {
+    cursor: pointer;
+    background-color: #000;
+    opacity: 0.7;
+  }
 }
 
 // Settings.js
@@ -64,55 +65,55 @@ body {
   text-align: center;
   height: 100px;
   opacity: 0.7;
-}
 
-.settings-section label {
-  font-weight: 700;
-  line-height: 3;
-  opacity: 0.7;
-}
+  label {
+    font-weight: 700;
+    line-height: 3;
+    opacity: 0.7;
+  }
 
-.settings-section button {
-  font-size: 1.1rem;
-  font-weight: 700;
-  border: 1px solid #fff;
-  background-color: transparent;
-  color: #fff;
-  border-radius: 6px;
-  outline: none;
-  width: 35px;
-  height: 35px;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  -webkit-transition: all 0.25s ease-out;
-  -moz-transition: all 0.25s ease-out;
-  transition: all 0.25s ease-out;
-  opacity: 0.7;
-}
+  button {
+    font-size: 1.1rem;
+    font-weight: 700;
+    border: 1px solid #fff;
+    background-color: transparent;
+    color: #fff;
+    border-radius: 6px;
+    outline: none;
+    width: 35px;
+    height: 35px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    -webkit-transition: all 0.25s ease-out;
+    -moz-transition: all 0.25s ease-out;
+    transition: all 0.25s ease-out;
+    opacity: 0.7;
+  }
 
-.settings-section button:not(.disable):hover {
-  cursor: pointer;
-  background-color: #000;
-}
+  button:not(.disable):hover {
+    cursor: pointer;
+    background-color: #000;
+  }
 
-.settings-section button.disable {
-  opacity: 0.5;
-  cursor: not-allowed;
-}
+  button.disable {
+    opacity: 0.5;
+    cursor: not-allowed;
+  }
 
-.settings-section span {
-  width: 45px;
-  height: 45px;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #fff;
-  border-radius: 50%;
-  color: #444;
-  margin-left: 10px;
-  margin-right: 10px;
-  font-size: 1.1rem;
+  span {
+    width: 45px;
+    height: 45px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
+    border-radius: 50%;
+    color: #444;
+    margin-left: 10px;
+    margin-right: 10px;
+    font-size: 1.1rem;
+  }
 }
 
 // Times.js
@@ -149,6 +150,8 @@ body {
   font-size: 5rem;
   font-weight: 700;
 }
+
+// Extra
 
 #unicorn {
   width: 270px;
